tests/architecture/fixtures/invalid/infrastructure-boundaries/sdk-private-subpath.ts
export { MockProductsRepository } from "@nexoraxs/sdk/commerce/products";
